# mdm_ai

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: mission_router.py
app/core/: config.py  constants.py  logging_config.py
app/detectors/: open_gourd_detector.py  protect_swallow_detector.py  receive_seed_detector.py  skip_book_detector.py
app/exceptions/: mission_exception.py
app/schemas/: mission_schema.py  pose_schema.py
app/utils/: geometry.py  (+2 more)
docs/: ai_api.md  backend_handoff.md  body_fairytale_README.md  body_fairytale_ai_server_structure_README.md  body_fairytale_ai_task_instruction.md  body_fairytale_api_spec.md  body_fairytale_error_code_spec.md  body_fairytale_json_samples.md  body_fairytale_mapping_table.md  fastapi_guide.md  mediapipe_motion_judgment_structure.md  test_report.md  testing_guide.md
samples/: README.md  error_hand_not_visible.json  error_invalid_pose_data.json  error_unknown_mission_type.json  error_user_not_detected.json  fail_open_gourd_hand_position_too_high.json  fail_open_gourd_movement_too_small.json  fail_open_gourd_sawing_motion_too_small.json  fail_protect_swallow_hands_not_centered.json  fail_protect_swallow_hands_too_far.json  fail_receive_seed_hand_not_raised.json  fail_receive_seed_hands_not_together.json  fail_skip_book_book_not_turned.json  scene_000_skip_book.json  scene_001_protect_swallow.json  scene_002_receive_seed.json  scene_003_open_gourd.json
tests/: test_integration_api.py  test_open_gourd.py  test_protect_swallow.py  test_receive_seed.py  test_schema.py  test_skip_book.py  test_utils.py
(+1 files in other folders)
